# strl_robotics

./: .gitmodules  README.md  USAGE.md
3D_objects_detection/: 2xSOLO_node.md  README.md  depth.py  depth_camera_with_normal.md  produce_train_val_test.py  test.launch  xyz_with_filter.py  xyz_with_filter_untested.py  zed_camera.py  zed_depth_test.launch
3D_objects_detection/bash_scripts/: first_terminal.bash  fourth_terminal.bash  second_terminal.bash  third_terminal.bash
3D_objects_detection/button_srv/: CMakeLists.txt  package.xml
3D_objects_detection/cvat_utils/: produce_train_val_test.py
3D_objects_detection/docker/: Dockerfile_yolact_edge
3D_objects_detection/docs/: depth_camera_with_normal.md  press_button_workspace.md
3D_objects_detection/launch/: test.launch  zed_depth_test.launch  zed_depth_test_visual.launch
3D_objects_detection/scripts/: image_visualizer.py  instances_to_semantic.py  xyz_with_filter.py  zed_camera.py
3D_objects_detection/solov2/: Dockerfile
3D_objects_detection/solov2/config/: solov2_light.py  solov2_r101_fpn.py
3D_objects_detection/solov2_config/: solov2_r101_fpn_2gpu_1x.py
control/: CMakeLists.txt  README.md  package.xml
control/config/: config_control.yaml  config_control_real.yaml
control/launch/: control.launch  control_real.launch
control/path_following/: CMakeLists.txt  README.md  package.xml
control/path_following/config/: config_path_following.yaml
control/path_following/launch/: path_following.launch
control/path_following/src/: path_following_node.cpp
control/src/: control_node.cpp  husky_mobile02_node.cpp  main.cpp
control/trajectory_tracking/: CMakeLists.txt  package.xml
control/trajectory_tracking/config/: config_trajectory_tracking.yaml
control/trajectory_tracking/launch/: trajectory_tracking.launch
control/trajectory_tracking/src/: trajectory_tracking_node.cpp
lidar_odometry/a_lego_loam/docker/: readme.md
lidar_odometry/a_lego_loam/src/: LO.cpp
manipulator/: fold_the_robot.py  know_your_pose.py  set_freedrive.py
manipulator/lift_tactical_node/: CMakeLists.txt  package.xml
manipulator/lift_tactical_node/config/: node_config.yaml
manipulator/lift_tactical_node/launch/: tactical_node.launch
manipulator/lift_tactical_node/src/: dh4.py  get_pose.py  husky_ctrl.py  tactical_node.py
manipulator/manipulator/: CMakeLists.txt  package.xml
manipulator/manipulator/launch/: press_button.launch  wo_service.launch
manipulator/manipulator/src/: button.py  get_pos.py  launch_solo.sh  press_button.py  press_realsense_rtde.py  press_rtde.py  print_tcppose.py  service.py  service_test.py
manipulator/manipulator/srv/: GetButtons.srv  PressButton.srv
occupancy_grid_mapping/: README.md
occupancy_grid_mapping/colored_occupancy_grid/: CMakeLists.txt  package.xml  plugin_description.xml
occupancy_grid_mapping/colored_occupancy_grid/msg/: ColoredOccupancyGrid.msg
occupancy_grid_mapping/colored_occupancy_grid/src/: ColoredOccupancyGridDisplay.cpp
occupancy_grid_mapping/rtabmap/: package.xml
occupancy_grid_mapping/rtabmap_example/: CMakeLists.txt  package.xml
occupancy_grid_mapping/rtabmap_example/launch/: loop_closure.launch  occupancy_grid_builder.launch  rgbd_odom.launch  rtabmap.launch  stereo_odom.launch  zed_left_camera_optical_frame_to_velodyne_transform.launch
occupancy_grid_mapping/rtabmap_example/rviz/: occupancy.rviz  rtabmap.rviz
occupancy_grid_mapping/rtabmap_example/scripts/: occupancy_grid_demo.py  openvslam_odom_to_base_link.py  openvslam_odom_to_base_link_with_drift.py  pause.py  resume.py  trigger_new_map.py
occupancy_grid_mapping/rtabmap_ros/: CMakeLists.txt  README.md  package.xml
occupancy_grid_mapping/rtabmap_ros/docker/: BUILD_INSIDE_DOCKER.md  Dockerfile  build.sh  into.sh  start.sh
occupancy_grid_mapping/rtabmap_ros/src/: MsgConversion.cpp  OccupancyGridBuilderNode.cpp  OccupancyGridBuilderWrapper.cpp
occupancy_grid_mapping/time_measurer/: CMakeLists.txt  package.xml  time_measurer-config.cmake.in
occupancy_grid_mapping/time_measurer/include/time_measurer/: time_measurer.h
occupancy_grid_mapping/time_measurer/src/: time_measurer.cc  time_measurer_test.cc
odometry/: README.md  docker-compose.yml
odometry/lidar_odometry/: start.sh
odometry/lidar_odometry/a_lego_loam/: CMakeLists.txt  README.md  package.xml
odometry/lidar_odometry/a_lego_loam/docker/: Dockerfile  build.sh  start.sh
odometry/lidar_odometry/a_lego_loam/include/alego/: utility.h
odometry/lidar_odometry/a_lego_loam/launch/: husky_mipt.launch
odometry/lidar_odometry/a_lego_loam/scripts/: save_poses.py
odometry/lidar_odometry/a_lego_loam/src/: IP.cpp  LM.cpp  LO.cpp
odometry/odometry_fusion/: start.sh
odometry/odometry_fusion/tf_transformer/: CMakeLists.txt  LICENSE  README.md  package.xml
odometry/visual_odometry/: start.sh
odometry_fusion/robot_localization/docker/: readme.md  start.sh
place_recognition/: .gitignore  README.md  requirements.txt
place_recognition/docker/: Dockerfile.x86_64  build.sh  into.sh  start.sh
place_recognition/place_recognition/: CMakeLists.txt  package.xml
place_recognition/place_recognition/config/: netvlad_config.yaml
place_recognition/place_recognition/launch/: visual_pr.launch
place_recognition/place_recognition/scripts/: extract_data_from_bag.py  extract_image_features.py  load_weights.sh  visual_pr_node.py
place_recognition/place_recognition/src/: utils.py
place_recognition/place_recognition/src/models/: model_factory.py
place_recognition/place_recognition/src/models/patchnetvlad/: models_generic.py
planning/: README.md
planning/src/: obstacle_inflation.tar.xz
planning/src/cds_msgs/: CMakeLists.txt  package.xml
planning/src/cds_msgs/msg/: Metadata.msg  PathStamped.msg  PlannerTask.msg  Point.msg
planning/src/planner_cds_core/: CMakeLists.txt  package.xml
planning/src/planner_cds_core/Config/: config.xml
planning/src/planner_cds_core/include/planner_cds_core/: jp_search.h  map.h  mission.h  theta.h
planning/src/planner_cds_core/src/: isearch.cpp  jp_search.cpp  map.cpp  mission.cpp  theta.cpp
(+62 files in other folders)
