<?xml version="1.0"?>
<package format="2">
  <name>cds_msgs</name>
  <version>0.0.0</version>
  <description>The cds_msgs package</description>

  <maintainer email="golovin.va@phystech.edu">vlad</maintainer>


  <license>TODO</license>

  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>
  <buildtool_depend>catkin</buildtool_depend>

  <export>

  </export>
</package>
